--- a/main.css
+++ b/main.css
@@ -1,19 +1,37 @@
-/*css*/
-
 .img-max {
     width: 100%;
-    margin-top:10px;
+    margin-top:10%;
     border: 1px solid rgba(0,0,0,0.25);
 
 }
 .img-max-highlight {
     width: 100%;
-    margin-top: 5%;
+    margin-top: 7%;
+    margin-bottom: 0%;
+    border: 5px solid #313567;
+}
+.img-max-highlight-bottom {
+    width: 100%;
+    margin-top: 7%;
+    margin-bottom: 7%;
+    border: 5px solid #313567;
+}
+.img-max-highlight-pastrami {
+    width: 100%;
+    margin-top:7%;
+    margin-bottom:5%;
     border: 5px solid #313567;
 }
 .img-wrong-highlight {
     width: 100%;
-    margin-top:15px;
+    margin-top:7%;
+    margin-bottom:5%;
+    border: 5px solid red;
+}
+.img-wrong-highlight-maduros {
+    width: 100%;
+    margin-top:7%;
+    margin-bottom:2%;
     border: 5px solid red;
 }
 #border{
@@ -104,7 +122,7 @@
     margin-top: 0px;
     margin-right: 10px;
     width: 93%;
-    height: 65px;
+    height: 60px;
     font-family: Signika, sans-serif;
     font-size: 18px;
     font-weight: 500;
